; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_atomic_helper.c_drm_atomic_helper_shutdown.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_atomic_helper.c_drm_atomic_helper_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }
%struct.drm_modeset_acquire_ctx = type { i32 }

@.str = private unnamed_addr constant [51 x i8] c"Disabling all crtc's during unload failed with %i\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @drm_atomic_helper_shutdown(%struct.drm_device* %0) #0 {
  %2 = alloca %struct.drm_device*, align 8
  %3 = alloca %struct.drm_modeset_acquire_ctx, align 4
  %4 = alloca i32, align 4
  store %struct.drm_device* %0, %struct.drm_device** %2, align 8
  %5 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %6 = load i32, i32* %4, align 4
  %7 = getelementptr inbounds %struct.drm_modeset_acquire_ctx, %struct.drm_modeset_acquire_ctx* %3, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @DRM_MODESET_LOCK_ALL_BEGIN(%struct.drm_device* %5, i32 %8, i32 0, i32 %6)
  %10 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %11 = call i32 @drm_atomic_helper_disable_all(%struct.drm_device* %10, %struct.drm_modeset_acquire_ctx* %3)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 %15)
  br label %17

17:                                               ; preds = %14, %1
  %18 = load i32, i32* %4, align 4
  %19 = getelementptr inbounds %struct.drm_modeset_acquire_ctx, %struct.drm_modeset_acquire_ctx* %3, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @DRM_MODESET_LOCK_ALL_END(i32 %20, i32 %18)
  ret void
}

declare dso_local i32 @DRM_MODESET_LOCK_ALL_BEGIN(%struct.drm_device*, i32, i32, i32) #1

declare dso_local i32 @drm_atomic_helper_disable_all(%struct.drm_device*, %struct.drm_modeset_acquire_ctx*) #1

declare dso_local i32 @DRM_ERROR(i8*, i32) #1

declare dso_local i32 @DRM_MODESET_LOCK_ALL_END(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
